pranav/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-vc1"
    cert-manager.io/acme-challenge-type: http01
  name: vc1-ingress
  namespace: team-a
spec:
  ingressClassName: nginx
  rules:
  - host: pranav-vc1.goinit.net
    http:
      paths:
      - backend:
          service:
            name: vc1
            port: 
              number: 443
        path: /
        pathType: ImplementationSpecific
